# xDoc

./: .gitignore  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  installer.nsh  journal_rankings.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: gguf_ocr.rs  lib.rs  main.rs  plugin_host.rs  plugin_storage.rs  pptx_gen.rs  settings_db.rs
src-tauri/src/commands/: grobid.rs  misc.rs  mod.rs  model.rs  ocr.rs  paper.rs  pdf.rs  settings.rs
src/components/: AboutDialog.css  AboutDialog.tsx  CitationExportDialog.tsx  CommandPalette.tsx  ConfirmDialog.css  ConfirmDialog.tsx  EnvironmentCheck.tsx  HomePage.tsx  PluginPanelHost.tsx  ReadingReport.css  ReadingReport.tsx  ReferenceSidebar.tsx  SettingsDialog.css  SettingsDialog.tsx
src/hooks/: index.ts  useAiChat.tsx  useAnnotations.ts  useGrobid.ts  useOcr.ts  usePapers.ts  useReadingSession.ts  useSettings.ts  useSidebar.ts  useTabs.ts  useZoom.ts
src/plugin/: PluginManagerDialog.tsx  context.ts  event-bus.ts  host.ts  index.ts  interceptors.ts  manager.ts  types.ts  ui-extensions.ts
src/plugin/builtins/: ppt-generator.ts
src/plugin/sandbox/: plugin-worker.ts  worker-host.ts
src/utils/: citationFormatter.ts  crossrefResolver.ts  paperDb.ts  pdfMetadata.ts
