[package]
name = "xdoc"
version = "0.1.0"
description = "xDoc - Document layout analysis and OCR tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xdoc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17.2"
image = "0.25.10"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-http = "2"
pdfium-render = "0.8.37"
base64 = "0.22.1"
libloading = "0.8"
anyhow = "1"
models-cat = { version = "0.1", features = ["tokio"] }
async-trait = "0.1"
walkdir = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"

